# equipfun

./: Cargo.toml  README.md  Rocket.toml
src/: db.rs  lib.rs  main.rs  models.rs  neo.rs  routes.rs  schema.rs  types.rs
src/graphql/: schema.rs
ui/: package.json
