[package]
name = "juniper-rocket-example"
version = "0.1.0"
authors = ["Eric Dattore <eric.dattore@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"
name = "libjuniperrocketexample"

[[bin]]
path = "src/bin/main.rs"
name = "juniper-rocket-example"

[dependencies]
rocket = "0.4"
rocket_contrib = { version = "0.4", features = ["databases", "cypher_pool"] }
rusted_cypher = "1.1"
juniper = "0.12"
juniper_rocket = "0.3"
