[package]
name = "equipfun"
version = "0.1.0"
authors = ["Nathan Hartzler <hartzlernathan@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4"
rocket_contrib = { version = "0.4", features = ["databases", "cypher_pool", "serve"] }
rusted_cypher = "1.1"
juniper = "0.12"
juniper_rocket = "0.3"
uuid = { version = "0.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
